Fix subdued section spacing issues

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -42,6 +42,11 @@
 
 .Section-subdued {
   background-color: color('sky', 'lighter');
+
+  .Header + & {
+    border-top: border-width() solid color('sky');
+    margin-top: spacing(loose);
+  }
 }
 
 .SectionHeader {
@@ -65,5 +70,10 @@
 
   @include page-content-when-not-fully-condensed {
     padding: 0 spacing(loose) spacing(loose);
+  }
+
+  .Section-subdued + & {
+    border-top: border-width() solid color('sky');
+    padding: spacing(loose);
   }
 }
